{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "1538b174-dd65-4acf-b8d0-260c4ca8914c",
            "actions": [
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "9ffb4ec2-cd3b-47fa-9b61-c948ff45c0b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "949c140d-58ab-42f0-b9e3-897b830fcc91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "7fc4cf30-82da-49bf-8b36-5ea25c850719",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Weapon1",
                    "type": "Button",
                    "id": "c8d4f559-476e-4f75-b16a-27552e645f64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Weapon2",
                    "type": "Button",
                    "id": "8e5aaf6e-cdb6-41f5-b97b-0142a52e3858",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScrollWeapon",
                    "type": "Value",
                    "id": "0acc7ff1-e2f7-43e8-a0e8-f58a72f0b536",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3eba1606-b6c2-486e-bf17-22334ce8b7fb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93e42142-2018-4305-ae20-86b44ea79764",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d4cc244-abf8-42c8-bcef-fc868f763adc",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7353c54b-6e0b-4058-896b-7facac65d24f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "260c4257-c25f-4516-9d54-d841b2fdf2cf",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad307553-7d17-4243-b434-60fd3b4e9efc",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}